# crispy-goggles

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_MESSAGE.txt  LICENSE  Makefile  PR_BODY.md  README.md  auth_state.json.bak  auth_state.json.meta.json  auth_state.the_internet.json  pyproject.toml  pytest-nonlocal.txt  pytest.ini  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  refresh-browsers.yml
ci/: list_local_tests.py  sanitize_logs.py
dev/: x_automation_flow.py
features/: chrome_login.feature  environment.py  login.feature
features/steps/: chrome_login_steps.py  login_steps.py
scripts/: ensure_auth_state.py  launch_headed_with_auth.py  preview_context.py  record_auth_state.py  setup.sh  show_auth_state.py
scripts/dev/: ensure_auth_state.py  record_auth_state.py  show_auth_state.py
tests/: __init__.py  conftest.py  dev_context.py  fixtures_realistic.py  local_login.html  test_healing_locators.py  test_login_playwright.py  test_playwright_healing.py  test_search_protests.py  test_smoke.py  test_x_automation_flow.py  x_automation_flow.py
utils/: __init__.py  healing_locators.py  playwright_healing.py  playwright_humanize.py  playwright_utils.py
