[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crispy-goggles"
version = "0.0.0"
description = "Playwright + Behave test helpers"
authors = [ { name = "forever-efficient" } ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"behave>=1.2,<2",
	"playwright>=1.35,<2",
	"typing-extensions>=4.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
